kustomize/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trissect-frontend
  namespace: trissect
spec:
  replicas: 1
  selector:
    matchLabels:
      app: trissect-frontend
  template:
    metadata:
      labels:
        app: trissect-frontend
    spec:
      containers:
        - image: docker.pkg.github.com/tuuturu/trissect/trissect:0.0.2
          name: trissect-frontend
