kustomize/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: trissect-frontend
  namespace: trissect
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: trissect-frontend
  type: ClusterIP
