kustomize/trissect.yaml
apiVersion: v1
kind: Service
metadata:
  name: trissect-frontend
  namespace: trissect
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: trissect-frontend
  type: ClusterIP

---

apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
  name: trissect-frontend
  namespace: trissect
spec:
  rules:
  - host: trissect.tuuturu.org
    http:
      paths:
      - backend:
          serviceName: trissect-frontend
          servicePort: 80
        path: /
  tls:
  - hosts:
    - trissect.tuuturu.org
    secretName: trissect-frontend-tls

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: trissect-frontend
  namespace: trissect
spec:
  replicas: 1
  selector:
    matchLabels:
      app: trissect-frontend
  template:
    metadata:
      labels:
        app: trissect-frontend
    spec:
      containers:
      - image: docker.pkg.github.com/tuuturu/trissect/trissect:0.0.2
        name: trissect-frontend

---
